--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.556.0",
-    "next": "15.5.3",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
     "react": "19.1.0",
