--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.556.0",
     "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
+    "openai": "^6.15.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
