--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@prisma/*": [
+        "src/generated/prisma/*"
       ]
     }
   },
