--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
+    "@auth/prisma-adapter": "2.11.1",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "@radix-ui/react-slot": "^1.2.4",
@@ -20,7 +20,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.556.0",
     "next": "^16.0.7",
-    "next-auth": "^5.0.0-beta.30",
+    "next-auth": "5.0.0-beta.30",
     "openai": "^6.15.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
@@ -29,6 +29,9 @@
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.13"
+  },
+  "overrides": {
+    "@auth/core": "0.41.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
