--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "2.11.1",
+    "@next/third-parties": "^16.1.6",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "@radix-ui/react-slot": "^1.2.4",
@@ -19,7 +20,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.556.0",
-    "next": "^16.0.7",
+    "next": "^16.1.6",
     "next-auth": "5.0.0-beta.30",
     "openai": "^6.15.0",
     "pg": "^8.16.3",
