--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cekid",
+  "name": "enakga",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,6 +15,7 @@
     "@prisma/client": "^7.0.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@vercel/blob": "^2.0.0",
+    "@zxing/browser": "^0.1.5",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
